--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="hey-guys" class="anchor" href="#hey-guys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hey Guys!</h3>
 
-<p>Welcome to Sonali's N</p>
+<p>Welcome to Sonali's Page! I love Harry Potter and I think I am a wizard. Thank you for visiting Hogwarts. It's beautiful day outside with clear skies with a slight chance of broomsticks taking over the sky around 3 pm. </p>
 
       <footer class="site-footer">
 
