--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="hey-guys" class="anchor" href="#hey-guys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hey Guys!</h3>
 
-<p>hgfkjfkhgkhjkg </p>
+<p> Welcome to my home at Hogwarts! I love Harry Potter and I am a wizard. Today is a beautiful day outside with clear skies, but there is a slight possibility of broomsticks at around 3 pm. </p>
         </section>
 
         <aside id="sidebar">
