--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="ST : My Life Story">
+    <meta name="description" content="ST : Life as a wizard ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/sonalitol">View on GitHub</a>
 
           <h1 id="project_title">ST</h1>
-          <h2 id="project_tagline">My Life Story</h2>
+          <h2 id="project_tagline">Life as a wizard </h2>
 
         </header>
     </div>
@@ -30,7 +30,7 @@
         <h3>
 <a id="hey-guys" class="anchor" href="#hey-guys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hey Guys!</h3>
 
-<p>Welcome to Sonali's </p>
+<p>Welcome to my home at Hogwarts! I love Harry Potter and I am a wizard. Today is a beautiful day with clear skies, but there is a slight possibility of broomsticks at around 3 pm. </p>
       </section>
     </div>
 
