first change to update site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>ST</title>
+    <title>Sonali Tolani</title>
   </head>
 
   <body>
@@ -30,7 +30,11 @@
         <h3>
 <a id="hey-guys" class="anchor" href="#hey-guys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hey Guys!</h3>
 
-<p>Welcome to my home at Hogwarts! I love Harry Potter and I am a wizard. Today is a beautiful day with clear skies, but there is a slight possibility of broomsticks at around 3 pm. </p>
+<p>Welcoming all muggles to my home at Hogwarts! I love Harry Potter and I am a wizard. Today is a beautiful day with clear skies, but there is a slight possibility of broomsticks at around 3 pm. </p>
+<p> <a href="http://pottermore.com"> Let the Journey Begin </a> </p>
+
+<p> Here is my all-time favorite video! Check it out! </p>
+<iframe width="800" height="400" src="https://www.youtube.com/embed/FWtO0cfgewY" frameborder="0" allowfullscreen></iframe>
       </section>
     </div>
 
@@ -41,7 +45,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
